[package]
name = "rafters"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["David Skyberg <davidskyberg@gmail.com>"]
description = "A Rust cli for calculating roof rafters"
repository = "https://github.com/dskyberg/rafters"
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = "4.5.28"
round_to = { git="https://github.com/dskyberg/round_to"}
inquire = "0.7.5"
serde = { version = "1", features = ["derive"] }
rafter_lib = { git = "https://github.com/dskyberg/rafter_lib.git" }
thiserror = "2.0.12"
